--- a/clockwork/Clockwork.Web/Clockwork.Web.csproj
+++ b/clockwork/Clockwork.Web/Clockwork.Web.csproj
@@ -77,7 +77,6 @@
   <ItemGroup>
     <Folder Include="Content\" />
     <Folder Include="Models\" />
-    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
@@ -87,6 +86,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\JavaScript.js" />
+    <Content Include="Scripts\StyleSheet1.css" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
