--- a/clockwork/Clockwork.Web/Clockwork.Web.csproj
+++ b/clockwork/Clockwork.Web/Clockwork.Web.csproj
@@ -86,7 +86,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\JavaScript.js" />
+    <Content Include="Scripts\JavaScript.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\StyleSheet1.css" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Index.cshtml" />
